# advent-of-code

./: .gitignore  README.md  bash_functions.sh  shell.nix
2015/day12-1/: app.cabal
2015/day12-2/: app.cabal
2015/day19-2/: app.cabal  input2.txt
2015/day21-1/: app.cabal  shop
2015/day7-1/: log
2016/day10-1/: app.cabal
2016/day11-1/: log
2016/day11-2/: app.cabal  log
2016/day13-2/: app.cabal
2016/day14-1/: log
2016/day21-2/: app.cabal
2016/day23-2/: modified_input.txt
2016/day4-2/: log
2017/day21-1/: log
2017/day21-2/: app.prof  app.prof.html
2017/day23-2/: unasm.txt
2017/day3-1/: app.cabal
2018/day10-1/: log
2018/day12-2/: log
2018/day15-1/: app.cabal  test.txt
2018/day19-2/: annotated.txt  pretty.txt  simplified.txt
2018/day20-1/: app.cabal
2018/day21-1/: pretty.txt
2018/day21-2/: annotated.txt
2018/day22-2/: app.cabal
2018/day23-2/: app.cabal
2018/day24-2/: input.txt
2018/day5-2/: app.cabal
2018/day6-1/: example2.txt
2019/day1-1/: aoc.cabal
2019/day10-1/: aoc.cabal
2019/day11-2/: aoc.cabal
2019/day13-1/: aoc.cabal
2019/day13-2/: aoc.cabal
2019/day14-1/: app.cabal
2019/day16-2/: app.cabal  example2_1.txt  rows.txt  rowsEven.txt
2019/day17-1/: input.txt  output.txt
2019/day17-2/: example1.txt  input.txt  instructions  movie  output.txt
2019/day18-1/: app.cabal
2019/day18-2/: example7.txt  example8.txt
2019/day19-2/: app.cabal  image  render  renderNearSol  trueRender
2019/day21-1/: aoc.cabal  spring.input
2019/day21-1/src/: Intcode.hs
2019/day3-1/: aoc.cabal
2019/day3-1/src/: Main.hs
(+662 files in other folders)
